<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_preference"
            android:icon="@drawable/preference"
            android:title="@string/navigation_myPreference" />

        <item
            android:id="@+id/nav_investment_history"
            android:icon="@drawable/invest_history"
            android:title="@string/navigation_investmentHistory" />

        <item
            android:id="@+id/nav_reinvestment"
            android:icon="@drawable/reinvestment"
            android:title="@string/navigation_Reinvestment" />

        <item android:title="">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_menu_manage"
                        android:title="@string/navigation_settings" />

                    <item android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_logout"
                        android:title="Logout" />

                </group>
            </menu>
        </item>

    </group>
</menu>