<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/backgroud_color"
    tools:context="com.app.inv.RegistrationActivity">

    <View style="@style/Divider_Vertical"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_home_back">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_Registration1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center_horizontal" />

            <View
                android:layout_width="60dp"
                style="@style/Divider_Vertical"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp">

                    <EditText android:id="@+id/input_FirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:hint="@string/hint_regFirstName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <EditText android:id="@+id/input_LastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:hint="@string/hint_regLastName"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white">

                <EditText android:id="@+id/input_userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:hint="@string/hint_regEmail" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white">

                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:hint="@string/hint_regPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white">

                <EditText android:id="@+id/input_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:hint="@string/hint_regConfirmPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_Registration2"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/appCompatTextView" />

            <View
                android:layout_width="60dp"
                style="@style/Divider_Vertical"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp">

                    <EditText android:id="@+id/input_Street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:hint="@string/hint_regStreet" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <EditText android:id="@+id/input_City"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:hint="@string/hint_regCity"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp">

                    <EditText android:id="@+id/input_Zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:hint="@string/hint_regZip" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <EditText android:id="@+id/input_Country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:hint="@string/hint_regCountry"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="5dp">

                <EditText android:id="@+id/input_MobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:hint="@string/hint_regMobileNumber"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_ractangle_theme"
                android:text="@string/hint_regButtonRegister"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_Cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_ractangle_theme"
                android:text="@string/hint_regButtonCancel"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>