<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/backgroud_color"
    tools:context="com.app.inv.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroud_color">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_settings"
                    android:layout_marginBottom="3dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/heading_Settings"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="70dp"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerSelectLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/gray"
                    android:layout_marginBottom="10dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_settingChangePassword"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText android:id="@+id/input_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_settingChangeAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_settingSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/shape_ractangle_theme"
                    android:text="@string/hint_forgetButton"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
