<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/backgroud_color"
    tools:context="com.app.inv.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_home_back"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View style="@style/Divider_Vertical"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="100dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_centerInParent="true">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_Home"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"/>

            <View
                android:layout_width="60dp"
                style="@style/Divider_Vertical"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/twitter"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/linkedin"/>

            </LinearLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/input_userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:hint="@string/hint_homeUserId" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:hint="@string/hint_homePassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_ractangle_theme"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/text_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Register"
                    android:textColor="@color/white"
                    android:layout_marginRight="5dp"/>

                <View style="@style/Divider_Horizontal"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/text_ForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:text="@string/text_ForgetPassword"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>


